# flask-website

./: .flaskenv  .gitignore  README.md  app.py  docker-compose.yaml  gunicorn.conf.py  pages_modified.json  pyproject.toml
docker/app/: Dockerfile
docker/nginx/: Dockerfile  default.conf  entrypoint.sh  nginx.conf
src/: .env.template  app.py  settings.py
src/orders/: forms.py  mailing.py
src/routes/: __init__.py  base.py  blog.py
src/static/css/: animate.css  bootstrap.min.css  style.css
src/static/js/: script.js
src/templates/: layout.html  robots.txt  sitemap.xml
src/templates/blog/: blog_bridal.html  blog_evening.html  blog_everyday.html  blog_lifting.html  blog_magazines.html  blog_one.html  blog_photo_shoot.html  blog_two.html
src/templates/errors/: 404.html  500.html
src/templates/includes/: _messages.html  blog_banner.html  makeup_categories.html  pagination.html  tags.html
src/templates/main/: about.html  contact.html  index.html  portfolio.html  price_page.html
src/utils/: log.py
tests/: conftest.py  test_base.py  test_blog.py  test_config.py
