[project]
name = "flask-makeup-artist-website"
version = "0.1.0"
description = "A makeup artist's website created with a flask"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "flask>=3.1.0",
    "flask-wtf>=1.2.2",
    "gevent>=25.4.2",
    "gunicorn>=23.0.0",
    "pytest>=8.3.5",
    "pytest-mock>=3.14.0",
    "wtforms>=3.2.1",
]

[tool.mypy]
strict = true

[tool.black]
line-length = 119
target-version = ["py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | venv
  | \.env
  | \.flake8
)/
'''

[tool.isort]
profile = "black"
line_length = 119
multi_line_output = 3
include_trailing_comma = true
split_on_trailing_comma = true
use_parentheses = true
ensure_newline_before_comments = true
src_paths = ["src"]
skip = [".gitignore", ".dockerignore"]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "mypy>=1.15.0",
]
